--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Welcome to Traveller !</h1>
   <div ng-controller='testController as test'>
     {{ test.test }}
+    {{ test.roger }}
   </div>
   <script src="app/build/all.js"></script>
 </body>
