Commit before leaving Luxembourg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="px2">Welcome</div>
   </div>
   <br>
-  <div ng-controller='testController as test'>
+  <div ng-controller='TestController as test'>
     {{ test.test }}
     {{ test.roger }}
     {{ test.gulp }}
